--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "exceljs": "^4.1.1",
     "export-from-json": "^1.3.0",
     "file-saver": "^2.0.2",
+    "forever": "^3.0.2",
     "google-maps-react": "^2.0.6",
     "highcharts": "^7.2.1",
     "highcharts-exporting": "^0.1.7",
@@ -25,6 +26,7 @@
     "linq": "^3.2.3",
     "moment": "^2.29.0",
     "node-sass": "^4.14.1",
+    "nodemon": "^2.0.4",
     "query-string": "^6.12.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
