--- a/package.json
+++ b/package.json
@@ -8,26 +8,27 @@
     "ag-grid-community": "^21.2.2",
     "ag-grid-enterprise": "^24.0.0",
     "ag-grid-react": "^21.2.2",
-    "antd": "^4.6.2",
+    "antd": "^4.6.6",
     "axios": "^0.18.1",
-    "bootstrap": "^4.5.0",
+    "bootstrap": "^4.5.2",
     "dateformat": "^3.0.3",
     "exceljs": "^4.1.1",
-    "export-from-json": "^1.3.0",
+    "export-from-json": "^1.3.4",
     "file-saver": "^2.0.2",
+    "forever": "^3.0.2",
     "google-maps-react": "^2.0.6",
-    "highcharts": "^7.2.1",
+    "highcharts": "^7.2.2",
     "highcharts-exporting": "^0.1.7",
-    "html2canvas": "^1.0.0-rc.5",
+    "html2canvas": "^1.0.0-rc.7",
     "image-downloader": "^4.0.1",
     "js-xlsx": "^0.8.22",
     "jspdf": "^1.5.3",
     "linq": "^3.2.3",
     "moment": "^2.29.0",
     "node-sass": "^4.14.1",
-    "query-string": "^6.12.1",
+    "query-string": "^6.13.5",
     "react": "^16.13.1",
-    "react-bootstrap": "^1.0.1",
+    "react-bootstrap": "^1.3.0",
     "react-bootstrap-time-picker": "^2.0.1",
     "react-dom": "^16.13.1",
     "react-highcharts": "^16.1.0",
@@ -41,7 +42,7 @@
     "react-scripts": "3.0.1",
     "react-select": "^3.1.0",
     "react-time-picker": "^4.0.1",
-    "react-timekeeper": "^1.0.0",
+    "react-timekeeper": "^1.1.0",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
